# MaruMaruSynth

./: .gitignore  Cargo.toml  MaruMaru.jucer  README.md  bundler.toml  log.txt  設計.md
MarkDown/: github使い方.md  アーキテクチャ.md  発振部設計.md  音声解析.md  音声解析設計.md
Source/: JuceLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RustBridge.cpp  RustBridge.h
assets/: spaceii.mid
log/: log.txt  spectral_analysis_log.txt
rust_marumaru/: Cargo.toml
rust_marumaru/src/: analyzer.rs  lib.rs
rust_marumaru/src/analyzer/: dynamic_pitch.rs  f0_estimator.rs  mod.rs  mode_freq.rs  mode_hybrid.rs  mode_time.rs  preprocess.rs  quality.rs  spectral_analyzer.rs  types.rs
rust_marumaru/src/oscillator/: mod.rs
rust_marumaru/tests/: debug_tests.rs  pipeline_test.rs
src/: lib.rs  params.rs  plugin.rs  voice.rs  wavetable.rs
